<resources>
    <string name="app_name">YouGo!</string>

    <string name="hello_you">Hello You!</string>

    <string name="masukkan_kriteria">Saya Ingin Merekomendasi!</string>
    <string name="mau_kemana_ya">Rekomendasikan Saya!</string>

    <string name="question_one">Berapa Lama Kamu Berpergian?</string>
    <string name="answer_one_question_one">1-3 hari</string>
    <string name="answer_two_question_one">4-7 hari</string>
    <string name="answer_three_question_one">Lebih dari 7 hari</string>

    <string name="question_two">Status Dana?</string>
    <string name="answer_one_question_two">Dana Kurang</string>
    <string name="answer_two_question_two">Dana Cukup</string>
    <string name="answer_three_question_two">Dana Berlebihan</string>

    <string name="question_three">Berapa Orang?</string>
    <string name="answer_one_question_three">Sendiri</string>
    <string name="answer_two_question_three">Berdua</string>
    <string name="answer_three_question_three">3 Orang/lebih</string>

    <string name="recommendation_one"></string>
    <string name="recommendation_two"></string>
    <string name="recommendation_three"></string>

    <string name="detail_info">Detail Info Recommendation Text</string>
    <string name="choose_recommendation">Pilih Rekomendasi Anda</string>
    <string name="our_recommendation">Rekomendasi Kami</string>
    <string name="agree">LANJUT</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">LANJUT</string>
    <string name="skip">LEWATI</string>
    <string name="start">MULAI</string>

    <string name="slide_1_desc">Halo selamat datang di aplikasi YouGo!</string>

    <string name="slide_2_desc">Aplikasi ini dapat merekomendasikan kamu tempat wisata saat kamu sedang berlibur atau merencanakan liburan</string>

    <string name="slide_3_desc">Jika kamu punya rekomendasi tempat wisata yang menarik YouGo juga dapat menerima rekomendasimu</string>
    <string name="slide_3_desc2">Saat ini YouGo! hanya meliputi tempat wisata provinsi D.I. Yogyakarta saja.</string>

    <string name="list_wisata">Daftar Tempat Wisata</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ayo_mulai">Ayo Mulai!</string>
</resources>
