<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bleizing.pariwisata.fragments.ChooseRecommendationFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_question"
        android:gravity="center_horizontal"
        android:text="@string/choose_recommendation"
        android:textStyle="bold"
        android:textSize="@dimen/question_text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_reccomendation_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/recommendation_one"
            android:textColor="@color/white"
            android:background="@drawable/button_border"/>

        <Button
            android:id="@+id/btn_reccomendation_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/recommendation_two"
            android:textColor="@color/white"
            android:background="@drawable/button_border"/>

        <Button
            android:id="@+id/btn_reccomendation_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/recommendation_three"
            android:textColor="@color/white"
            android:background="@drawable/button_border"/>

    </LinearLayout>

</LinearLayout>
