<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bleizing.pariwisata.fragments.QuestionOneFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_question"
        android:paddingStart="@dimen/padding_side_question"
        android:paddingEnd="@dimen/padding_side_question"
        android:paddingTop="@dimen/padding_buttom_up_question"
        android:paddingBottom="@dimen/padding_buttom_up_question"
        android:text="@string/question_one"
        android:textSize="@dimen/question_text_size"
        android:textColor="@color/white"
        android:background="@drawable/button_border"/>

    <TextView
        android:id="@+id/tv_answer_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_first_answer"
        android:paddingStart="@dimen/padding_side_question"
        android:paddingEnd="@dimen/padding_side_question"
        android:paddingTop="@dimen/padding_buttom_up_question"
        android:paddingBottom="@dimen/padding_buttom_up_question"
        android:text="@string/answer_one_question_one"
        android:textSize="@dimen/question_text_size"
        android:textColor="@color/white"
        android:background="@drawable/button_border"/>

    <TextView
        android:id="@+id/tv_answer_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_answer"
        android:paddingStart="@dimen/padding_side_question"
        android:paddingEnd="@dimen/padding_side_question"
        android:paddingTop="@dimen/padding_buttom_up_question"
        android:paddingBottom="@dimen/padding_buttom_up_question"
        android:text="@string/answer_two_question_one"
        android:textSize="@dimen/question_text_size"
        android:textColor="@color/white"
        android:background="@drawable/button_border"/>

    <TextView
        android:id="@+id/tv_answer_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_answer"
        android:paddingStart="@dimen/padding_side_question"
        android:paddingEnd="@dimen/padding_side_question"
        android:paddingTop="@dimen/padding_buttom_up_question"
        android:paddingBottom="@dimen/padding_buttom_up_question"
        android:text="@string/answer_three_question_one"
        android:textSize="@dimen/question_text_size"
        android:textColor="@color/white"
        android:background="@drawable/button_border"/>

</LinearLayout>
