<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen"
    tools:context="bleizing.pariwisata.fragments.QuestionTwoFragment"
    android:orientation="vertical">

    <include
        layout="@layout/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_top_question"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_side_question"
            android:paddingEnd="@dimen/padding_side_question"
            android:paddingTop="@dimen/padding_buttom_up_question"
            android:paddingBottom="@dimen/padding_buttom_up_question"
            android:text="@string/question_two"
            android:textSize="@dimen/question_text_size"
            android:textColor="@color/white"
            android:background="@drawable/transparent_with_border"/>

        <TextView
            android:id="@+id/tv_answer_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_first_answer"
            android:paddingStart="@dimen/padding_side_question"
            android:paddingEnd="@dimen/padding_side_question"
            android:paddingTop="@dimen/padding_buttom_up_question"
            android:paddingBottom="@dimen/padding_buttom_up_question"
            android:text="@string/answer_one_question_two"
            android:textSize="@dimen/question_text_size"
            android:textColor="@color/white"
            android:background="@drawable/transparent_with_border"/>

        <TextView
            android:id="@+id/tv_answer_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_answer"
            android:paddingStart="@dimen/padding_side_question"
            android:paddingEnd="@dimen/padding_side_question"
            android:paddingTop="@dimen/padding_buttom_up_question"
            android:paddingBottom="@dimen/padding_buttom_up_question"
            android:text="@string/answer_two_question_two"
            android:textSize="@dimen/question_text_size"
            android:textColor="@color/white"
            android:background="@drawable/transparent_with_border"/>

        <TextView
            android:id="@+id/tv_answer_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_answer"
            android:paddingStart="@dimen/padding_side_question"
            android:paddingEnd="@dimen/padding_side_question"
            android:paddingTop="@dimen/padding_buttom_up_question"
            android:paddingBottom="@dimen/padding_buttom_up_question"
            android:text="@string/answer_three_question_two"
            android:textSize="@dimen/question_text_size"
            android:textColor="@color/white"
            android:background="@drawable/transparent_with_border"/>

    </LinearLayout>

</LinearLayout>
